--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+.npm
+/node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -21,3 +26,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/.vscode/
