--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "dependencies": {
         "@material-ui/core": "^4.9.5",
         "@material-ui/icons": "^4.9.1",
+        "final-form": "^4.18.7",
         "mobx": "^5.15.4",
         "mobx-react": "^6.1.8",
         "mobx-state-tree": "^3.15.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-final-form": "^6.3.5",
         "react-scripts": "3.4.0",
         "typescript": "^3.7.5",
         "uuid": "^7.0.2"
