--- a/package.json
+++ b/package.json
@@ -2,6 +2,18 @@
     "name": "todo-list",
     "version": "0.1.0",
     "private": true,
+    "homepage": "http://web-usov.github.io/todo-list",
+    "scripts": {
+        "start": "env-cmd -f ./.env env-cmd -f ./.env.local react-scripts start",
+        "build:development": "env-cmd -f ./.env react-scripts build",
+        "build:production": "env-cmd -f ./.env.production react-scripts build",
+        "eject": "react-scripts eject",
+        "review": "npm run eslint",
+        "eslint": "eslint --ext .ts ./src",
+        "eslint:fix": "npm run eslint -- --fix",
+        "predeploy": "npm run build:production",
+        "deploy": "gh-pages -d build"
+    },
     "dependencies": {
         "@material-ui/core": "^4.9.5",
         "@material-ui/icons": "^4.9.1",
@@ -15,15 +27,6 @@
         "react-scripts": "3.4.0",
         "typescript": "^3.7.5",
         "uuid": "^7.0.2"
-    },
-    "scripts": {
-        "start": "env-cmd -f ./.env env-cmd -f ./.env.local react-scripts start",
-        "build:development": "env-cmd -f ./.env react-scripts build",
-        "build:production": "env-cmd -f ./.env.production react-scripts build",
-        "eject": "react-scripts eject",
-        "review": "npm run eslint",
-        "eslint": "eslint --ext .ts ./src",
-        "eslint:fix": "npm run eslint -- --fix"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -69,6 +72,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-react": "^7.18.3",
         "eslint-plugin-standard": "^4.0.1",
+        "gh-pages": "^2.2.0",
         "husky": "^4.2.3",
         "lint-staged": "^10.0.8",
         "prettier": "^1.19.1"
